--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/swiper": "^6.0.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fontawesome": "^1.7.1",
+    "swiper": "^10.3.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
