--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/aos": "^3.0.5",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/swiper": "^6.0.0",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
